[package]
name = "tmpc"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
humanize-duration = "0.0.7"
log = "0.4.27"
mpd = "0.1.0"
pretty_env_logger = "0.5.0"
rand = "0.9.1"
reqwest = { version = "0.12.20", optional = true }
teloxide = { version = "0.16.0", features = ["macros"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.17.0", features = ["v7"] }

[features]
local = ["dep:reqwest"]
